# sql-testing

./: .Makefile  .gitattributes  .gitlab-ci.yml  0003-openpgp-mlkem1024-kem-sha3.patch  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  config.toml  openpgp-policy.toml
autocrypt/: Cargo.toml
autocrypt/src/: cert.rs  lib.rs
guide/: Cargo.toml
guide/src/: lib.rs
ipc/: Cargo.toml  README.md  build.rs
ipc/examples/: assuan-client.rs  gpg-agent-client.rs  gpg-agent-decrypt.rs  gpg-agent-sign.rs
ipc/examples/ipc-standalone/: client.rs  hello_protocol.capnp  hello_protocol_capnp.rs  main.rs  server.rs
ipc/src/: gnupg.rs  keybox.rs  keygrip.rs  lib.rs  macros.rs  sexp.rs  tests.rs
ipc/src/assuan/: mod.rs  socket.rs
ipc/src/assuan/socket/: windows.rs
ipc/src/sexp/parse/: grammar.lalrpop  lexer.rs  mod.rs
ipc/tests/: gpg-agent.rs
ipc/tests/data/sexp/keys/: brainpoolP256r1-10B336F5EF10BB907A7D742B7133D1F19C0A5436.sexp  brainpoolP256r1-449288CE66E796412AEDD2DD66ED0710CA17B6A2.sexp  brainpoolP256r1.pgp  brainpoolP384r1-C1FAA1A67DA9243A32843C57835F82D56CA6BD5E.sexp  brainpoolP384r1-FF9204EB44DEBF5CC881259B16EBE258DCFB7181.sexp  brainpoolP384r1.pgp  brainpoolP512r1-A82C21A16F243568423A9E430F67A05C13C545E4.sexp  brainpoolP512r1-A8B9378441016C14C2DA722946E950A333B34EC3.sexp  brainpoolP512r1.pgp  dsa2048+elg2048-65C7273C5916F9FE76CA2B519B7610F3C208455E.sexp  dsa2048+elg2048-7BB049AD227BD8AE72D478C9EEDF5C65C7D32315.sexp  dsa2048+elg2048.pgp  ed25519+cv25519-AC0238024D8B69AC0D3B0B5651A7C7FF131BDE00.sexp  ed25519+cv25519-D8F41FB60BA0CD97AA8885AB673FEB494FCFC63E.sexp  ed25519+cv25519.pgp  nistp256+ecdsa+nistp256+ecdh-5152F0589E8FC024611E36EAD6C3F898F283B783.sexp  nistp256+ecdsa+nistp256+ecdh-A9F5BF4EFA00D011A8D69C6C7C6A944D389B2622.sexp  nistp256+ecdsa+nistp256+ecdh.pgp  nistp384+ecdsa+nistp384+ecdh-08D9473A030410E53B6457AD55757F2FA37A5360.sexp  nistp384+ecdsa+nistp384+ecdh-B6DC5115470D54B200DB4EBD3A7686E8E0FFF38C.sexp  nistp384+ecdsa+nistp384+ecdh.pgp  nistp521+ecdsa+nistp521+ecdh-9AD8F7DF135A5798D017B583EE4199F5FFE0F726.sexp  nistp521+ecdsa+nistp521+ecdh-B20E51055EB876E19309D4E312A94D69A9F0E0BB.sexp  nistp521+ecdsa+nistp521+ecdh.pgp  rsa3072-8BC1C5721611EE8BC42D0F3A53D144B3DFF8C8E3.sexp  rsa3072-E1F16162C32651C2A9C376355D4015B0A5188290.sexp  rsa3072.pgp  rsa3075-1D2B0898B37A706B6F77EEAC43241B81F24F9B2B.sexp  rsa3075-6432082212B23701C5EDDCAD6F4268AB16CD9A55.sexp  rsa3075.pgp
ipc/tests/data/sexp/private-keys-v1.d/: 178F088E4EF935F159FE8F4E83B981141200F488.key  6E4914E0001BA33C4C74B6D371B4DF5175499E6B.key  README.md  alice.pgp  bobby.pgp
net/: Cargo.toml
net/examples/: dane-generate.rs  dane-get.rs  hkp-get.rs  tor-hkp-get.rs
net/src/: dane.rs  email.rs  lib.rs  macros.rs  pks.rs  wkd.rs
net/tests/: hkp.rs
openpgp/: Cargo.toml  NEWS  README.md  build.rs
openpgp/benches/: encrypt_sign_message.rs
openpgp/benches/common/: decrypt.rs  encrypt.rs
openpgp/examples/: decrypt-with.rs  encrypt-for.rs  generate-encrypt-decrypt.rs  notarize.rs  pad.rs  reply-encrypted.rs  sign-detached.rs  sign.rs  statistics.rs  supported-algorithms.rs
openpgp/fuzz/: Cargo.toml
openpgp/fuzz/fuzz_targets/: cert_from_bytes.rs  csf_verify_from_bytes.rs  decrypt_from_bytes.rs  inline_verify_from_bytes.rs
openpgp/src/: armor.rs  cert.rs  fingerprint.rs  fmt.rs  keyhandle.rs  keyid.rs  lib.rs  macros.rs  packet_pile.rs  parse.rs  policy.rs  serialize.rs
openpgp/src/armor/: base64_utils.rs  crc.rs
openpgp/src/cert/: amalgamation.rs  bindings.rs  builder.rs  bundle.rs  lazysigs.rs  raw.rs  revoke.rs
openpgp/src/cert/amalgamation/: iter.rs  key.rs
openpgp/src/cert/amalgamation/key/: iter.rs
openpgp/src/cert/builder/: key.rs
openpgp/src/cert/parser/: mod.rs
openpgp/src/cert/parser/low_level/: grammar.lalrpop  lexer.rs  mod.rs
openpgp/src/crypto/: aead.rs  asymmetric.rs  backend.rs  ecdh.rs  hash.rs  key.rs  mem.rs  mod.rs  mpi.rs  s2k.rs  symmetric.rs  types.rs
openpgp/src/crypto/backend/: botan.rs  cng.rs  fuzzing.rs  interface.rs  nettle.rs  openssl.rs  rust.rs
openpgp/src/crypto/backend/botan/: aead.rs  asymmetric.rs  ecdh.rs  hash.rs  kdf.rs  symmetric.rs
openpgp/src/crypto/backend/cng/: aead.rs  asymmetric.rs  ecdh.rs  hash.rs  kdf.rs  symmetric.rs
openpgp/src/crypto/backend/fuzzing/: aead.rs  asymmetric.rs  ecdh.rs  hash.rs  kdf.rs  symmetric.rs
openpgp/src/crypto/backend/interface/: aead.rs  asymmetric.rs  kdf.rs  symmetric.rs
openpgp/src/crypto/backend/nettle/: aead.rs  asymmetric.rs  ecdh.rs  hash.rs  kdf.rs  symmetric.rs
openpgp/src/crypto/backend/openssl/: aead.rs  asymmetric.rs  der.rs  ecdh.rs  (+3 more)
openpgp/src/crypto/tests/: dsa.rs  ecdsa.rs  rsa.rs
openpgp/src/crypto/types/: aead_algorithm.rs  curve.rs  hash_algorithm.rs  public_key_algorithm.rs  symmetric_algorithm.rs
openpgp/src/message/: lexer.rs  mod.rs
openpgp/src/packet/: any.rs  compressed_data.rs  container.rs  key.rs  literal.rs  mdc.rs  mod.rs  one_pass_sig.rs  padding.rs  pkesk.rs  prelude.rs  seip.rs  signature.rs  skesk.rs  tag.rs  unknown.rs  user_attribute.rs  userid.rs
openpgp/src/packet/header/: ctb.rs  mod.rs
openpgp/src/packet/key/: conversions.rs  v4.rs  v6.rs
openpgp/src/packet/one_pass_sig/: v3.rs
openpgp/src/packet/pkesk/: v3.rs  v6.rs
openpgp/src/packet/seip/: v2.rs
openpgp/src/packet/signature/: cache.rs  subpacket.rs  v6.rs
openpgp/src/packet/skesk/: v4.rs  v6.rs
openpgp/src/parse/: hashed_reader.rs  map.rs  mpis.rs  packet_parser_builder.rs  packet_pile_parser.rs  stream.rs
openpgp/src/regex/: grammar.lalrpop  mod.rs
openpgp/src/serialize/: cert.rs  cert_armored.rs  stream.rs
openpgp/src/serialize/stream/: dash_escape.rs  padding.rs  trim_whitespace.rs
openpgp/src/types/: bitfield.rs  features.rs  key_flags.rs  mod.rs  revocation_key.rs  server_preferences.rs  timestamp.rs
openpgp/tests/: for-each-artifact.rs  secret-leak-detector.rs
openpgp/tests/data/keys/: InRelease.v3.signers.pgp
openpgp/tests/data/messages/: InRelease.v3  recursive.txt
openpgp/tests/data/pqc/: README.md
openpgp/tests/secret-leak-detector/: detector.rs
(+76 files in other folders)
