[package]
name = "sequoia-guide"
version = "0.22.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.21.0/guide/"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
license = "CC-BY-SA-4.0"
build = "build.rs"

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "1.0.0", default-features = false }
anyhow = "1.0.18"

[lib]
bench = false
